--- a/laradock/docker-compose.yml
+++ b/laradock/docker-compose.yml
@@ -1,7 +1,8 @@
 version: '3.7'
 services:
   database:
-    image: 'mysql:8.0'
+    image: 'mysql:5.6'
+    command: --default-authentication-plugin=mysql_native_password
     environment:
       MYSQL_ROOT_PASSWORD: password
     ports:
