--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,13 @@ yarn-error.log
 public/uploads/images
 ###< CUSTOM ###
 /docker/
+
+###> symfony/phpunit-bridge ###
+.phpunit.result.cache
+/phpunit.xml
+###< symfony/phpunit-bridge ###
+
+###> phpunit/phpunit ###
+/phpunit.xml
+.phpunit.result.cache
+###< phpunit/phpunit ###
