--- a/config/services.yaml
+++ b/config/services.yaml
@@ -35,7 +35,12 @@ services:
     App\MessageHandler\Event\:
         resource: '../src/MessageHandler/Event'
         autoconfigure: false
-        tags: [ { name: messenger.message_handler, bus: event.bus } ]
+        tags: [{ name: messenger.message_handler, bus: event.bus }]
+
+    App\MessageHandler\Query\:
+        resource: '../src/MessageHandler/Query'
+        autoconfigure: false
+        tags: [{ name: messenger.message_handler, bus: query.bus }]
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
