feature: messenger transport changed to CloudAMQP

--- a/laradock/.env
+++ b/laradock/.env
@@ -41,7 +41,7 @@ COMPOSE_PROJECT_NAME=messenger
 
 # Select a PHP version of the Workspace and PHP-FPM containers (Does not apply to HHVM).
 # Accepted values: 8.2 - 8.1 - 8.0 - 7.4 - 7.3 - 7.2 - 7.1 - 7.0 - 5.6
-PHP_VERSION=7.1
+PHP_VERSION=7.4
 
 COMPOSER_VERSION=2.5.8
 
@@ -102,6 +102,7 @@ WORKSPACE_AST_VERSION=1.0.10
 WORKSPACE_BROWSERSYNC_HOST_PORT=3000
 WORKSPACE_BROWSERSYNC_UI_HOST_PORT=3001
 WORKSPACE_VITE_PORT=5173
+WORKSPACE_INSTALL_AMQP=true
 
 WORKSPACE_INSTALL_SYMFONY=true
 
@@ -123,3 +124,8 @@ IDE_THEIA_PORT=987
 IDE_WEBIDE_PORT=984
 IDE_CODIAD_PORT=985
 IDE_ICECODER_PORT=986
+
+RABBITMQ_NODE_HOST_PORT=5672
+RABBITMQ_MANAGEMENT_HTTP_HOST_PORT=15672
+RABBITMQ_MANAGEMENT_HTTPS_HOST_PORT=15671
+RABBITMQ_WEB_STOMP_HOST_PORT=15674
