--- a/.env
+++ b/.env
@@ -29,7 +29,7 @@ DATABASE_URL=mysql://root:password@database:3306/messenger_tutorial
 
 ###> symfony/messenger ###
 # Choose one of the transports below
-MESSENGER_TRANSPORT_DSN=amqps://nxtmehbv:VFzlCU-8ormtN1w4zkUtbMYM6yQ9V6RK@woodpecker.rmq.cloudamqp.com/nxtmehbv
+MESSENGER_TRANSPORT_DSN=doctrine://default
 # MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
 ###< symfony/messenger ###
