--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -20,24 +20,10 @@ framework:
                 dsn: '%env(MESSENGER_TRANSPORT_DSN)%'
                 retry_strategy:
                   delay: 500
-                options:
-                  exchange:
-                    name: messages
-                    type: direct
-                    default_publish_routing_key: normal
-                  queues:
-                    messages_normal:
-                      binding_keys: [normal]
              async_priority_high:
                 dsn: '%env(MESSENGER_TRANSPORT_DSN)%'
                 options:
-                  exchange:
-                    name: messages
-                    types: direct
-                    default_publish_routing_key: high
-                  queues:
-                    messages_high:
-                      binding_keys: [high]
+                  queue_name: high
              failed: 'doctrine://default?queue_name=failed'
             # sync: 'sync://'
 
