bugfix: remove rabbitmq related things

--- a/laradock/docker-compose.yml
+++ b/laradock/docker-compose.yml
@@ -111,23 +111,23 @@ services:
       - backend
       - frontend
       ### RabbitMQ #############################################
-  rabbitmq:
-    build: ./rabbitmq
-    ports:
-      - "${RABBITMQ_NODE_HOST_PORT}:5672"
-      - "${RABBITMQ_MANAGEMENT_HTTP_HOST_PORT}:15672"
-      - "${RABBITMQ_MANAGEMENT_HTTPS_HOST_PORT}:15671"
-      - "${RABBITMQ_WEB_STOMP_HOST_PORT}:15674"
-    privileged: true
-    hostname: messenger-rabbitmq
-    volumes:
-      - ${DATA_PATH_HOST}/rabbitmq:/var/lib/rabbitmq
-      - ./rabbitmq/rabbitmq.conf:/etc/rabbitmq/rabbitmq.conf
-      - ./rabbitmq/management_agent.disable_metrics_collector.conf:/etc/rabbitmq/conf.d/management_agent.disable_metrics_collector.conf
-    depends_on:
-      - php-fpm
-    networks:
-      - backend
+#  rabbitmq:
+#    build: ./rabbitmq
+#    ports:
+#      - "${RABBITMQ_NODE_HOST_PORT}:5672"
+#      - "${RABBITMQ_MANAGEMENT_HTTP_HOST_PORT}:15672"
+#      - "${RABBITMQ_MANAGEMENT_HTTPS_HOST_PORT}:15671"
+#      - "${RABBITMQ_WEB_STOMP_HOST_PORT}:15674"
+#    privileged: true
+#    hostname: messenger-rabbitmq
+#    volumes:
+#      - ${DATA_PATH_HOST}/rabbitmq:/var/lib/rabbitmq
+#      - ./rabbitmq/rabbitmq.conf:/etc/rabbitmq/rabbitmq.conf
+#      - ./rabbitmq/management_agent.disable_metrics_collector.conf:/etc/rabbitmq/conf.d/management_agent.disable_metrics_collector.conf
+#    depends_on:
+#      - php-fpm
+#    networks:
+#      - backend
 
 networks:
   frontend:
