--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "symfony/serializer": "4.3.*",
         "symfony/validator": "4.3.*",
         "symfony/webpack-encore-bundle": "^1.5",
-        "symfony/yaml": "4.3.*"
+        "symfony/yaml": "4.3.*",
+        "ext-json": "*"
     },
     "config": {
         "preferred-install": {
